# ShanoFannonEncoding

./: CMakeLists.txt  StringValidator.h  main.cpp
Step1/: FileManager.cpp  FileManager.h
Step2/: CompareNodes.h  Encoding.cpp  Encoding.h  Node.cpp  Node.h
Step3/: TraverseShannonFano.h
Step4/: CompressFile.cpp  CompressFile.h
Step5/: CalculateDataCompression.cpp  CalculateDataCompression.h
